# fastmetrics

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  justfile  release.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: baseline.rs  common.rs  family.rs  metric.rs
benchmarks/src/format/: common.rs  protobuf.rs  text.rs
client/: Cargo.toml  build.rs
client/derive/: Cargo.toml
client/derive/src/: encode_label_set.rs
client/src/: lib.rs
client/src/encoder/: label_set.rs  mod.rs
client/src/format/: text.rs
client/src/format/protobuf/: mod.rs
client/src/metrics/: family.rs  mod.rs
client/src/metrics/raw/: atomic.rs  bucket.rs  number.rs  quantile.rs
client/src/metrics/types/: counter.rs  gauge.rs  gauge_histogram.rs  histogram.rs  info.rs  mod.rs  state_set.rs  summary.rs
client/src/registry/: errors.rs  mod.rs  subsystem.rs
derive/: Cargo.toml
derive/src/: encode_label_set.rs  encode_label_value.rs  lib.rs  state_set_value.rs
examples/: Cargo.toml  build.rs
examples/src/: axum.rs  family.rs  lazy_lock_metrics.rs  metrics.rs  process_metrics.rs  simple_metrics.rs  static_metrics.rs
examples/src/derive/: encode_label.rs  register.rs  register_global.rs  register_static_metrics.rs
examples/src/exporter/: actix.rs  axum.rs  common.rs  hyper.rs  negotiation.rs  poem.rs  rocket.rs  warp.rs
examples/src/metrics/: http.rs  mod.rs  process.rs  release_info.rs
fastmetrics/: Cargo.toml  build.rs
fastmetrics-derive/: Cargo.toml
fastmetrics-derive/src/: encode_label_set.rs  encode_label_value.rs  label_attributes.rs  label_index_mapping.rs  label_set.rs  label_set_schema.rs  lib.rs  register.rs  state_set_value.rs  utils.rs
fastmetrics-derive/src/registrant/: field.rs  mod.rs
fastmetrics-derive/tests/: lib.rs  ui_tests.rs
fastmetrics-derive/tests/ui/fail/: encode_label_set_non_struct.stderr  encode_label_value_non_enum.rs  encode_label_value_non_enum.stderr  state_set_value_non_enum.rs  state_set_value_non_enum.stderr
fastmetrics-derive/tests/ui/fail/encode_label_set/: duplicate_attribute.rs  duplicate_attribute.stderr  exclusive_attr_conflicts.rs  exclusive_attr_conflicts.stderr  non_struct.rs  non_struct.stderr  skip_and_flatten_conflict.rs  skip_and_flatten_conflict.stderr  unrecognized_attr.rs  unrecognized_attr.stderr
fastmetrics-derive/tests/ui/fail/encode_label_value/: non_enum.rs  non_enum.stderr  tuple_struct_not_newtype.rs  tuple_struct_not_newtype.stderr
fastmetrics-derive/tests/ui/fail/label_index_mapping/: enum_with_payload_variant.rs  enum_with_payload_variant.stderr  skip_field_without_default.rs  skip_field_without_default.stderr  tuple_struct_input.rs  tuple_struct_input.stderr  union_input.rs  union_input.stderr
fastmetrics-derive/tests/ui/fail/label_set/: exclusive_attr_conflicts.rs  exclusive_attr_conflicts.stderr  missing_encode_label_value.rs  missing_encode_label_value.stderr  non_named_struct.rs  non_named_struct.stderr  non_struct.rs  non_struct.stderr  unrecognized_attr.rs  unrecognized_attr.stderr
fastmetrics-derive/tests/ui/fail/label_set_schema/: non_struct.rs  non_struct.stderr
fastmetrics-derive/tests/ui/fail/register/: cannot_coexist_with_skip.stderr  duplicate_attribute.rs  duplicate_attribute.stderr  exclusive_attr_conflicts.rs  exclusive_attr_conflicts.stderr  flatten_cannot_coexist_with_other_attrs.rs  flatten_cannot_coexist_with_other_attrs.stderr  flatten_cannot_coexist_with_other_attrs_except_subsystem.rs  flatten_cannot_coexist_with_other_attrs_except_subsystem.stderr  flatten_cannot_coexist_with_rename_or_unit_attrs.rs  flatten_cannot_coexist_with_rename_or_unit_attrs.stderr  invalid_unit_str.rs  invalid_unit_str.stderr  invalid_unit_variant.rs  invalid_unit_variant.stderr  skip_cannot_coexist_with_other_attrs.rs  skip_cannot_coexist_with_other_attrs.stderr  unrecognized_attr.rs  unrecognized_attr.stderr
fastmetrics-derive/tests/ui/fail/state_set_value/: non_enum.stderr
fastmetrics-derive/tests/ui/pass/: encode_label_set.rs  encode_label_value.rs  label_index_mapping.rs  label_set.rs  label_set_schema.rs  register.rs  state_set_value.rs
fastmetrics-process/: Cargo.toml  README.md
fastmetrics-process/src/: lib.rs
fastmetrics/derive/: Cargo.toml
fastmetrics/derive/src/: encode_label_set.rs  encode_label_value.rs  lib.rs  state_set_value.rs
fastmetrics/derive/src/registrant/: attribute.rs  mod.rs
fastmetrics/src/: error.rs  lib.rs
fastmetrics/src/encoder/: exemplar.rs  label_set.rs  mod.rs  value.rs
fastmetrics/src/format/: mod.rs  profile.rs  prost.rs  protobuf.rs  text.rs
fastmetrics/src/format/prost/: mod.rs  openmetrics.rs  prometheus.rs
fastmetrics/src/format/proto/: prometheus_data_model.proto
fastmetrics/src/format/protobuf/: mod.rs  openmetrics.rs  prometheus.rs
fastmetrics/src/format/text/: config.rs  encoder.rs  mod.rs  names.rs  tests.rs
fastmetrics/src/metrics/: family.rs  mod.rs
fastmetrics/src/metrics/family/: dynamic.rs  indexed.rs  mod.rs
fastmetrics/src/metrics/internal/: histogram.rs  lazy.rs  mod.rs
fastmetrics/src/metrics/lazy_group/: id.rs  mod.rs  scrape_ctx.rs  source.rs
fastmetrics/src/metrics/types/: counter.rs  gauge.rs  gauge_histogram.rs  histogram.rs  info.rs  mod.rs  state_set.rs  summary.rs  unknown.rs
fastmetrics/src/metrics/utils/: fetch.rs
fastmetrics/src/raw/: atomic.rs  bucket.rs  label_set.rs  metadata.rs  mod.rs  number.rs  quantile.rs  types.rs
fastmetrics/src/registry/: errors.rs  global.rs  mod.rs  register.rs  subsystem.rs  validate.rs
src/: lib.rs
src/encoder/: label_set.rs  mod.rs  number.rs
src/format/: mod.rs  text.rs
src/format/protobuf/: mod.rs
src/metrics/: family.rs  mod.rs
src/metrics/raw/: atomic.rs  bucket.rs  mod.rs  quantile.rs
src/metrics/types/: counter.rs  gauge.rs  gauge_histogram.rs  histogram.rs  mod.rs  state_set.rs  summary.rs  unknown.rs
src/registry/: errors.rs  mod.rs  subsystem.rs
