[workspace]
resolver = "2"
members = [
    "benchmarks",
    "fastmetrics",
    "fastmetrics/derive",
    "examples",
]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0"
homepage = "https://github.com/koushiro/fastmetrics"
repository = "https://github.com/koushiro/fastmetrics"
