[workspace]
resolver = "2"
members = [
    "benchmarks",
    "examples",
    "fastmetrics",
    "fastmetrics/derive",
]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0"
homepage = "https://github.com/koushiro/fastmetrics"
repository = "https://github.com/koushiro/fastmetrics"

[workspace.dependencies]
cfg-if = "1.0"
dtoa = "1.0"
itoa = "1.0"
parking_lot = "0.12"
paste = "1.0"
foldhash = "0.1"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
proc-macro2 = "1"
quote = "1"
syn = "2"

# dev dependencies
indoc = "2.0"
trybuild = "1"
