[workspace]
resolver = "2"
members = [
    "benchmarks",
    "examples",
    "fastmetrics",
    "fastmetrics-derive",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
homepage = "https://github.com/koushiro/fastmetrics"
repository = "https://github.com/koushiro/fastmetrics"
