[package]
name = "fastmetrics-benchmarks"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
criterion = "0.7"
fastmetrics = { path = "../fastmetrics", features = ["derive", "protobuf"] }
pprof = { version = "0.14.0", default-features = false, features = [
    "criterion",
    "flamegraph",
    # Enable the feature on Mac M1
    "frame-pointer",
] }
prometheus = "0.14"
prometheus-client = { version = "0.24", features = ["protobuf"] }
prost_0_12 = { package = "prost", version = "0.12" }
rand = "0.9.0"

[[bench]]
name = "metric"
path = "src/metric.rs"
harness = false

[[bench]]
name = "family"
path = "src/family.rs"
harness = false

[[bench]]
name = "text"
path = "src/format/text.rs"
harness = false

[[bench]]
name = "protobuf"
path = "src/format/protobuf.rs"
harness = false
