[package]
name = "openmetrics-client"
version = "0.1.0"
description = "Another Open Metrics client library in Rust."
keywords = ["openmetrics", "metrics", "prometheus"]
documentation = "https://docs.rs/openmetrics-client"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["foldhash"]
derive = ["dep:openmetrics-client-derive"]
protobuf = ["dep:prost", "dep:prost-build", "dep:prost-types"]

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[dependencies]
cfg-if = "1.0"
dtoa = "1.0"
itoa = "1.0"
parking_lot = "0.12"
paste = "1.0"

foldhash = { version = "0.1", optional = true }
openmetrics-client-derive = { path = "derive", version = "0.1", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
