[package]
name = "fastmetrics-examples"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow = "1.0"
axum = "0.8.1"
fastmetrics = { path = "../fastmetrics", features = ["derive", "prost"] }
pin-project = "1.1"
rand = "0.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["net", "macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["normalize-path"] }

[[example]]
name = "metrics"
path = "src/metrics.rs"

[[example]]
name = "static_metrics"
path = "src/static_metrics.rs"

[[example]]
name = "derive_encode_label"
path = "src/derive/encode_label.rs"

[[example]]
name = "derive_register"
path = "src/derive/register.rs"

[[example]]
name = "derive_register_global"
path = "src/derive/register_global.rs"

[[example]]
name = "derive_register_static_metrics"
path = "src/derive/register_static_metrics.rs"

[[example]]
name = "axum-exporter"
path = "src/exporter/axum.rs"
