[package]
name = "fastmetrics-examples"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "rustls"] }
anyhow = "1.0"
axum = "0.8"
bytes = "1.7"
fastmetrics = { path = "../fastmetrics", features = ["derive", "prost"] }
fastmetrics-process = { path = "../fastmetrics-process" }
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
pin-project = "1.1"
poem = { version = "3.1", features = ["websocket", "tower-compat"] }
rand = "0.10"
rocket = { version = "0.5", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["net", "macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["normalize-path"] }
warp = { version = "0.4", features = ["server"] }

[[example]]
name = "simple_metrics"
path = "src/simple_metrics.rs"

[[example]]
name = "static_metrics"
path = "src/static_metrics.rs"

[[example]]
name = "process_metrics"
path = "src/process_metrics.rs"

[[example]]
name = "derive_encode_label"
path = "src/derive/encode_label.rs"

[[example]]
name = "derive_register"
path = "src/derive/register.rs"

[[example]]
name = "derive_register_global"
path = "src/derive/register_global.rs"

[[example]]
name = "derive_register_static_metrics"
path = "src/derive/register_static_metrics.rs"

[[example]]
name = "actix_exporter"
path = "src/exporter/actix.rs"

[[example]]
name = "axum_exporter"
path = "src/exporter/axum.rs"

[[example]]
name = "hyper_exporter"
path = "src/exporter/hyper.rs"

[[example]]
name = "poem_exporter"
path = "src/exporter/poem.rs"

[[example]]
name = "rocket_exporter"
path = "src/exporter/rocket.rs"

[[example]]
name = "warp_exporter"
path = "src/exporter/warp.rs"
