[package]
name = "fastmetrics-derive"
version = "0.2.0-rc.1"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "Some derive macros for fastmetrics."
keywords = ["openmetrics", "metrics", "prometheus", "derive", "macros"]
documentation = "https://docs.rs/fastmetrics-derive"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
fastmetrics = { path = "../fastmetrics" }
trybuild = "1"
