[package]
name = "fastmetrics-process"
version = "0.2.1"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "Prometheus-style process metrics built on fastmetrics."
keywords = ["openmetrics", "metrics", "prometheus", "process"]
documentation = "https://docs.rs/fastmetrics-process"
readme = "README.md"
edition.workspace = true
rust-version = "1.95"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
fastmetrics = { path = "../fastmetrics", version = "0.7.1" }
parking_lot = "0.12"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
