[package]
name = "fastmetrics"
version = "0.1.1"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "OpenMetrics client library in Rust."
keywords = ["openmetrics", "metrics", "prometheus"]
documentation = "https://docs.rs/fastmetrics"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["foldhash"]
derive = ["dep:fastmetrics-derive"]
protobuf = ["dep:prost", "dep:prost-build", "dep:prost-types"]

[build-dependencies]
prost-build = { workspace = true, optional = true }

[dependencies]
fastmetrics-derive = { path = "derive", version = "0.1", optional = true }
cfg-if = { workspace = true }
dtoa = { workspace = true }
itoa = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
foldhash = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[dev-dependencies]
indoc = { workspace = true}
