[package]
name = "fastmetrics"
version = "0.5.0"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "OpenMetrics / Prometheus client library in Rust."
keywords = ["openmetrics", "metrics", "prometheus"]
documentation = "https://docs.rs/fastmetrics"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["foldhash"]
derive = ["dep:fastmetrics-derive"]
prost = ["dep:prost", "dep:prost-build", "dep:prost-types"]
protobuf = ["dep:protobuf", "dep:protobuf-codegen"]

[build-dependencies]
prost-build = { version = "0.14", optional = true }
protobuf-codegen = { version = "3.7", optional = true }

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
dtoa = "1.0"
itoa = "1.0"
parking_lot = "0.12"
paste = "1.0"

fastmetrics-derive = { path = "../fastmetrics-derive", version = "0.5.0", optional = true }
foldhash = { version = "0.2", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
protobuf = { version = "3.7", optional = true }

[dev-dependencies]
indoc = "2.0"
