[package]
name = "openmetrics-client-derive"
version = "0.1.0"
description = "Some derive macros for openmetrics_client."
keywords = ["openmetrics", "metrics", "prometheus", "derive", "macros"]
documentation = "https://docs.rs/openmetrics-client-derive"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
