[package]
name = "fastmetrics-derive"
version = "0.1.0"
authors = ["Qinxuan Chen <https://github.com/koushiro>"]
description = "Some derive macros for fastmetrics."
keywords = ["openmetrics", "metrics", "prometheus", "derive", "macros"]
documentation = "https://docs.rs/fastmetrics-derive"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
